--- a/web/themes/custom/cacs_theme/scss/_variables.scss
+++ b/web/themes/custom/cacs_theme/scss/_variables.scss
@@ -3,8 +3,10 @@ $body-bg: #ffffff;
 $text-color: #666666;
 $primary-color: #232D4B;
 $secondary-color: #dc762c;
+$tertiary-color: #495E9D;
 $font-primary: "franklin-gothic-urw", sans-serif;
 $font-condensed: "franklin-gothic-urw-cond", sans-serif;
 // Font families
 $font-body: "franklin-gothic-urw", sans-serif;
-$font-headings: "bodoni-urw", serif;
+$font-headings: "franklin-gothic-urw", serif;
+$font-headings-bodoni: "bodoni-urw", serif;
